<resources>
    <string name="app_name">Escrow</string>

    <!-- Onboarding -->
    <!-- Onboarding1 -->
    <string name="onbTitle1">The third party\nyou can trust</string>
    <string name="onbDesc1">Buying from online stores does not have to \nbe scary. We make it more secure.</string>
    <string name="onboardingImgDesc">Onboarding-1 image</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="createAcctBtn">Create Account</string>

    <!-- Onboarding2 -->
    <string name="onbTitle2">For buyers, sellers\nand freelancers</string>
    <string name="onbDesc2">It doesn\'t matter if you are a buyer, seller or\nfreelancer, we have something for you.</string>

    <!-- Onboarding3 -->
    <string name="onbTitle3">Easy to\nsetup</string>
    <string name="onbDesc3">Set up an escrow transaction in less than\nthree minutes. No hassles.</string>


    <string name="emailTextView">Email</string>
    <string name="emailHelper">Your email</string>
    <string name="passwordTextView">Password</string>
    <string name="passwordHelper">***************</string>
    <string name="loginBtn2">Log in</string>
    <string name="forgotPassTextView">Forgot Password?</string>


    <string name="createAcctTextView">Create Account</string>
    <string name="extraCreate">Just a few details to get you all sorted</string>
    <string name="emailAdd">Email Address</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="user">Username</string>
    <string name="phone">Phone Number</string>
    <string name="next_btn">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register2">RegisterActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Forgot Password page !-->
    <string name="forgotPassTextView2">Forgot Password</string>
    <string name="extraForpotPass">Enter your email to reset your password</string>
    <string name="resetPassBtn">Reset Password</string>
    <string name="goBackBtn">Go Back</string>

    <!-- error display -->
    <string name="emailError">Incorrect email format</string>
    <string name="fullnameError">Only alphabets are allowed</string>
    <string name="usernameError">Username is taken</string>
    <string name="phoneError">maximum of 11 numbers allowed</string>
    <string name="passwordError">Minimum of 6 characters allowed</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Dashboard Activity !-->
    <string name="helloTextView">Hello,</string>
    <string name="dashboardUsername">Anonymous</string> <!--TODO: ALLOW USER NAME INSTEAD OF PUTTING STRING -->
    <string name="in_escrow">IN ESCROW</string>
    <string name="escorBalance">₦24,809.56</string>
    <string name="escrowBalanceCredit">₦4,809.56</string>
    <string name="escrowBalanceDebit">₦20,000.00</string>
    <string name="view_transaction"> +View Transactions</string>
    <string name="availableBal">AVAILABLE BALANCE</string>
    <string name="openWallet"> +Open Wallet</string>
    <string name="availableBalanceCredit">₦205,800.00</string>
    <string name="quick_actio">Quick Actions</string>

    <!-- Quick action activities -->
    <string name="initiate">Initiate Escrow\nTransaction</string>
    <string name="disp">Disputes</string>
    <string name="deposit">Deposit\nMoney</string>
    <string name="wihdraw">Withdraw\nMoney</string>


    <!-- Initiate transaction activity -->
    <string name="create">Create</string>
    <string name="secondParty">Second party user</string>
    <string name="amt">Amount</string>
    <string name="escrowLngt">Escrow Length</string>
    <string name="inspectPeriod">Inspection period</string>
    <string name="escrowLngtHelper">Choose duration of the transaction</string>
    <string name="inspectPeriodHelper">Choose preferred inspection period</string>
    <string name="proceedBtn">Proceed</string>


    <!-- Initiate Confirm Activity -->
    <string name="review">Review</string>
    <string name="initiateTransacWith">You want to initiate an escrow transaction with</string>
    <string name="chargesTextHelper">Charges</string>
    <string name="confirmBtn">Confirm</string>

    <!-- Initiate Success Activity -->
    <string name="complete">Initiation Complete</string>
    <string name="awesomeBtn">Awesome</string>

    <!-- Ongoing activity -->
    <string name="ongoingTitle">Activities</string>
</resources>