<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/forgotPassTextView2"
        android:textAppearance="@style/loginTitle"
        android:lineSpacingExtra="0sp"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/extraForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:text="@string/extraForpotPass"
        android:textAppearance="@style/label"
        android:lineSpacingExtra="0sp"

        />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/emailAdd"
        android:textAppearance="@style/emailTextView"
        android:lineSpacingExtra="6sp"
        android:translationY="-2.92sp"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailOutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="172dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Escrow.TextInput"
        style="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:hint="@string/emailHelper"
            android:inputType="textEmailAddress"

            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetBtn"
        style="@style/loginBtn"
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="267dp"
        android:text="@string/resetPassBtn" />

    <TextView
        android:id="@+id/goBackLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="170dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="360dp"
        android:text="@string/goBackBtn"
        android:textAppearance="@style/forgotPassTextView"

        />


</RelativeLayout>