<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- TODO: edit the top cancel image on mac -->

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:text="@string/loginBtn"
        android:textAppearance="@style/loginTitle"
        android:lineSpacingExtra="0sp"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="148dp"
        android:text="@string/emailTextView"
        android:textAppearance="@style/emailTextView"
        android:lineSpacingExtra="6sp"
        android:translationY="-2.92sp"
        android:gravity="top"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailOutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="170dp"
        app:hintEnabled="false"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Escrow.TextInput"
        style="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:inputType="textEmailAddress"
            android:hint="@string/emailHelper"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="280dp"
        android:text="@string/passwordTextView"
        android:textAppearance="@style/emailTextView"
        android:lineSpacingExtra="6sp"
        android:translationY="-2.92sp"
        android:gravity="top"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordOutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="302dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Escrow.TextInput"
        style="@style/TextInputLayoutStyle">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="30"
        android:inputType="textPassword"
        android:hint="@string/passwordHelper"

        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        style="@style/loginBtn"
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="405dp"
        android:layout_marginEnd="25dp"
        android:text="@string/loginBtn2" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="160dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="490dp"
        android:text="@string/forgotPassTextView"
        android:textAppearance="@style/forgotPassTextView"

        />

</RelativeLayout>