<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/createAcct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/createAcctTextView"
        android:textAppearance="@style/loginTitle"
        android:lineSpacingExtra="0sp"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/extraCreateAcct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:text="@string/extraCreate"
        android:textAppearance="@style/label"
        android:lineSpacingExtra="0sp"

        />


    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/phone"
        android:textAppearance="@style/emailTextView"
        android:lineSpacingExtra="6sp"
        android:translationY="-2.92sp"
        android:gravity="top"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumOutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="172dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Escrow.TextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:text="@string/passwordTextView"
        android:textAppearance="@style/emailTextView"
        android:lineSpacingExtra="6sp"
        android:translationY="-2.92sp"
        android:gravity="top"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordOutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="282dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Escrow.TextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordTextView"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        style="@style/loginBtn"
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="400dp"
        android:text="@string/loginBtn2" />

</RelativeLayout>